--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,9 @@
+# jdk version for sources and tools
+build --java_language_version=21
+build --java_runtime_version=corretto_21
+build --tool_java_language_version=21
+build --tool_java_runtime_version=corretto_21
+
 # run scala compiler with a persistent worker
 build --strategy=Scalac=worker
 build --worker_sandboxing
